# datamask

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  engine.rs  main.rs  mask.rs  pii.rs
